# sudachi.rs.ffi

./: .gitignore  Cargo.toml  README.md  README_ja.md
.github/workflows/: build.yml  publish.yaml  release.yml
deno/: README_for_jsr.md  benchmark.ts  exsample.ts  exsample_callback.ts  exsample_raw.ts  jsr.json  mod.ts  sudachi_default_for_jsr.json  test.ts
python_benchmark/: benchmark.py  requirements.txt
resources/: sudachi.json  sudachi_default.json
src/: analysis.rs  build.rs  lib.rs  output.rs  tests.rs
tests/: integration_test.rs
