[package]
name = "sudachi-rs-ffi"
version = "0.6.11-3"
edition = "2024"
build = "src/build.rs"

[package.metadata.winresource]
LegalCopyright = "Copyright (c) 2026 @taqman"
FileDescription = "Sudachi Japanese Morphological Analyzer FFI"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sudachi_ffi"

[dependencies]
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", package = "sudachi" }

[build-dependencies]
winresource = "0.1.31"
